# licensing-poc

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  build.md  demo_runbook.md  design.md  integration.md  runbook.md
scripts/: README.md  build_executables.py  e2e.sh  uninstall.ps1  uninstall.sh  update_releases.ps1
src/: activation_client.py  activation_server.py  cli.py  demo_app.py  fingerprint.py  issuer.py  keygen.py  license_core.py
tests/: conftest.py  test_activation_server.py  test_clock_tamper.py  test_feature_gate.py  test_fingerprint.py  test_issuer.py  test_license_core.py  test_license_core_edge.py  test_placeholder.py  test_seat_cap.py
