[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "onemachine-licensing-poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["cryptography>=42.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
