[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onemachine-licensing-poc"
version = "0.1.0"
description = "Minimal offline licensing POC: node-locked, time-bound, feature-gated"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
]

[project.scripts]
onemachine-license = "src.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "nuitka>=2.4.0",
    "ordered-set>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
